feat: Enhance binary sensors and bump version to 0.1.2
- Update binary sensor display to 'Online'/'Offline'
- Improve battery inverter status accuracy
- Implement separate entity IDs for battery and solar inverter status
- Enhance debug logging for binary sensors
- Add nighttime context for solar inverter status
- Update version to 0.1.2 in manifest.json

--- a/custom_components/saj_monitor/manifest.json
+++ b/custom_components/saj_monitor/manifest.json
@@ -1,11 +1,11 @@
 {
-  "domain": "saj_monitor",
+  "domain": "saj",
   "name": "SAJ Solar & Battery Monitor",
-  "documentation": "https://github.com/LowKey88/sajmonitor",
+  "documentation": "https://github.com/LowKey88/SAJMonitor",
   "dependencies": [],
   "codeowners": ["@LowKey88"],
   "requirements": [],
   "config_flow": true,
   "iot_class": "cloud_polling",
-  "version": "0.1.1"
+  "version": "0.1.2"
 }
