--- a/custom_components/saj_elekeeper/manifest.json
+++ b/custom_components/saj_elekeeper/manifest.json
@@ -1,7 +1,7 @@
 {
-  "domain": "saj",
-  "name": "SAJ Solar & Battery Monitor",
-  "documentation": "https://github.com/LowKey88/SAJMonitor",
+  "domain": "saj_elekeeper",
+  "name": "SAJ Elekeeper",
+  "documentation": "https://github.com/LowKey88/SAJElekeeper",
   "dependencies": [],
   "codeowners": ["@LowKey88"],
   "requirements": [],
